--- a/assets/css/sb-admin-2.css
+++ b/assets/css/sb-admin-2.css
@@ -220,6 +220,7 @@ body {
     height: 100%;
 }
 
+/*
 table.dataTable thead .sorting,
 table.dataTable thead .sorting_asc,
 table.dataTable thead .sorting_desc,
@@ -246,6 +247,7 @@ table.dataTable thead .sorting:after {
     font-family: fontawesome;
     color: rgba(50,50,50,.5);
 }
+*/
 
 .btn-circle {
     width: 30px;
