--- a/assets/css/manga.css
+++ b/assets/css/manga.css
@@ -234,7 +234,14 @@ body{
 	border-radius:10px;
 }
 
-#manga-menu{
+#button-bar {
+    position:absolute;
+    z-index:1000;
+    top:10px;
+    right:10px;
+}
+
+/*#manga-menu{
     position:absolute;
     z-index:1000;
     width:22px;
@@ -266,9 +273,9 @@ body{
 
 .fullscreen-icon:hover{
     stroke: black;
-}
+}*/
 
-.zoom-icon{
+/*.zoom-icon{
 	position:absolute;
 	z-index:1000;
 	width:22px;
@@ -296,7 +303,7 @@ body{
 .zoom-icon-out.zoom-icon-out-hover{
 	background-position:-66px 0;
 	cursor: pointer;
-}
+}*/
 
 .bottom{
 	position:absolute;
