--- a/assets/css/manga.css
+++ b/assets/css/manga.css
@@ -241,20 +241,27 @@ body{
     right:10px;
 }
 
-/*#manga-menu{
-    position:absolute;
-    z-index:1000;
-    width:22px;
-    height:22px;
-    top:70px;
-    right:10px;
-    background-image: url(../pics/menu25.svg);
-    background-size:22px 22px;
-    stroke: gray;
+#manga-menu,
+i.zoom-icon,
+i.fullscreen-icon {
+    color: #ccc;
     cursor: pointer;
 }
 
-.manga-menu:hover{
+#manga-menu:hover,
+i.zoom-icon:hover,
+i.fullscreen-icon:hover {
+    color: #000;
+}
+
+    #manga-menu:link {
+        color: #ccc;
+    }
+    
+    #manga-menu:link:hover {
+        color: #000;
+    }
+/*.manga-menu:hover{
     stroke: black;
 }
 
