--- a/assets/css/3dflip.css
+++ b/assets/css/3dflip.css
@@ -16,13 +16,13 @@
     transform: rotateY(180deg);
 }
 
-.flip-container,
-.front,
-.back {
-    width: 321px;
-    height: 449px;
-}
-
+    .flip-container,
+    .front,
+    .back {
+        width: 195px;
+        height: 300px;
+    }
+    
 /* flip speed goes here */
 .flipper {
     -webkit-transition: 0.4s;
@@ -52,6 +52,11 @@
 .front {
     z-index: 2;
     box-shadow:0 0 50px rgba(0,0,0,0.3);
+}
+
+.front img {
+    width: 100%;
+    height: 100%;
 }
 
 /* back, initially hidden pane */
