--- a/assets/css/mix.css
+++ b/assets/css/mix.css
@@ -10,7 +10,6 @@ body, button{
 
 .controls{
   padding: 2%;
-  background: #333;
   color: #eee;
 }
 
@@ -46,7 +45,6 @@ button + label{
 .container{
   padding: 2% 2% 0;
   text-align: justify;
-  background: #68b8c4;
 
   -webkit-backface-visibility: hidden;
 }
@@ -61,6 +59,9 @@ button + label{
 .container .gap{
   display: inline-block;
   width: 49%;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
 }
 
 .container .mix{
